# NexusLite

./: .gitignore  Bincode_V2_Example.md  Cargo.toml  LICENSE  Project_Development.md  Project_Roadmap.md  README.md  SECURITY-THREAT-MODEL.md  SECURITY.md  build.rs  deny.toml  log4rs.yaml  nexuslite.wasp
.github/: FUNDING.yml
.github/workflows/: ci.yml  code_tests.yml  docs.yml  features-check.yml  fuzz-cargo.yml  fuzz-smoke.yml  miri.yml  mutation.yml  security.yml
benchmarks/: Cargo.toml  benchmark_wasp.rs  wal.rs
benchmarks/recovery_logging/: aof.rs  aries.rs  cassandra.rs  cow_btree.rs  journal.rs  mod.rs  raft_consensus.rs  redo_wal.rs  shadow_paging.rs  wal.rs  wal_checkpoints.rs  wal_memtable.rs  wal_mvcc_replication.rs  wal_sstable.rs  wasp.rs
benchmarks/results/: benchmark_crashStorage_20250820_230331.csv  benchmark_crashStorage_20250820_230458.csv
benchmarks/synthetic_data/: mod.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_filter_parser/: valid_and.json  valid_eq.json
fuzz/corpus/fuzz_ndjson_import/: valid.jsonl
fuzz/corpus/fuzz_update_parser/: invalid_op.json  valid_inc.json  valid_set.json
fuzz/fuzz_targets/: fuzz_csv_import.rs  fuzz_eval.rs  fuzz_filter_parser.rs  fuzz_ndjson_import.rs  fuzz_update_parser.rs
scripts/: run_tests_with_logs.py
src/: api.rs  cache.rs  cli.rs  collection.rs  crypto.rs  document.rs  engine.rs  errors.rs  export.rs  feature_flags.rs  fsutil.rs  import.rs  index.rs  lib.rs  logger.rs  query.rs  telemetry.rs  test_support.rs  types.rs  wal.rs  wasp.rs
src/api/: admin.rs  collections.rs  crypto.rs  db.rs  feature.rs  mod.rs
src/cache/: config.rs  core.rs  metrics.rs  mod.rs  policy.rs  size.rs
src/cli/: command.rs  mod.rs  runner.rs  util.rs
src/collection/: core.rs  index_admin.rs  mod.rs  ops.rs
src/crypto/: mod.rs
src/crypto/file_encryption/: ecc.rs  kyber.rs  mod.rs
src/crypto/hash_secrets/: argon2.rs  dilithium.rs  mod.rs
src/crypto/signature_verification/: ecdsa.rs  mod.rs  sphincs.rs
src/database/: engine.rs  index.rs  mod.rs
src/document/: core.rs  mod.rs  types.rs
src/export/: mod.rs  options.rs  pipeline.rs  sinks.rs
src/import/: bson.rs  csv.rs  detect.rs  mod.rs  ndjson.rs  options.rs  pipeline.rs  util.rs
src/query/: cursor.rs  eval.rs  exec.rs  mod.rs  parse.rs  telemetry.rs  types.rs
src/recovery/: mod.rs  recover.rs
src/recovery/wasp/: cache.rs  consistency.rs  manifest.rs  mod.rs  page.rs  segment.rs  snapshot.rs  tree.rs  types.rs  wal.rs  wasp_engine.rs
src/utils/: devlog.rs  errors.rs  feature_flags.rs  fsutil.rs  json.rs  logger.rs  mod.rs  num.rs  types.rs
test_framework/: integration.rs  mod_collection.rs
tests/: all.rs  benchmarks.rs  integration.rs  integration_tests.rs  interactive.rs  mod.rs  mod_api.rs  mod_cache.rs  mod_cache_sprint2.rs  mod_cache_sprint3.rs  mod_cli.rs  mod_collection.rs  mod_concurrency.rs  mod_create_document.rs  mod_crypto.rs  mod_document.rs  mod_engine.rs  mod_ephemeral.rs  mod_errors.rs  mod_export.rs  mod_feature_flags.rs  mod_import.rs  mod_index.rs  mod_lib.rs  mod_open.rs  mod_paths.rs  mod_query.rs  mod_query_features.rs  mod_recovery_manager.rs  mod_shell.rs  mod_snapshot.rs  mod_telemetry.rs  mod_telemetry_edges.rs  mod_types.rs  mod_verify.rs  mod_wal.rs  mod_wasp.rs  mod_wasp_checkpoint.rs  mod_wasp_segment.rs  mod_wasp_wal.rs  (+4 more)
tests/common/: mod.rs  test_logger.rs
tests/integration_tests/: mod.rs  mod_lib.rs
tests/integration_tests/api/: mod.rs  mod_api.rs  mod_api_create_doc.rs  mod_api_crypto.rs  mod_api_import_export.rs  (+2 more)
tests/interactive/: mod.rs  mod_correct_credentials.rs  mod_incorrect_credentials.rs
tests/prop_tests/: mod.rs
(+81 files in other folders)
