[package]
name = "nexus_lite"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde", "derive"]}
bson = "2.15.0"
chrono = { version = "0.4.41", features = ["serde"] }
hnsw = "0.11.0"
lazy_static = "1.5.0"
log = "0.4.27"
log4rs = "1.3.0"
lru = "0.16.0"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_bson = "0.0.1"
serde_json = "1.0.142"
thiserror = "2.0.15"
time = "0.3.41"
tokio = "1.47.1"
uuid = { version = "1.18.0", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.20.0"
