[[bin]]
name = "benchmark_wasp"
path = "benchmarks/benchmark_wasp.rs"

[package]
name = "nexuslite"
version = "0.1.0"
edition = "2024"
publish = true


[workspace]
members = ["."]


[dependencies]
bincode = { version = "2.0.1", features = ["serde", "derive"]}
bson = { version = "3.0.0", features = ["serde", "serde_json-1"] }
csv = "1.3.0"
chrono = { version = "0.4.41", features = ["serde"] }
crc32fast = "1.5.0"
log = "0.4.27"
log4rs = "1.3.0"
lru = "0.16.0"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.142"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
winapi = { version = "0.3.9", features = ["winbase"] }
regex = { version = "1.11.2", optional = true }
ordered-float = "5.0.0"
clap = { version = "4.5.18", features = ["derive"] }
toml = "0.9.5"
dirs-next = "2.0.0"
aes-gcm = "0.10.3"
hkdf = "0.12.4"
p256 = { version = "0.13.2", features = ["ecdsa", "pkcs8", "ecdh"] }
rand_core = "0.9.3"
sha2 = "0.10.8"
argon2 = "0.5.3"
rand = "0.9.2"
getrandom = "0.3.3"
rpassword = "7.3.1"
tempfile = "3.20.0"
once_cell = "1.19.0"
hex = "0.4.3"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
fake = "4.4.0"

[dev-dependencies]
proptest = "1.5.0"

[features]
default = []
regex = ["dep:regex"]
